--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 asgiref==3.2.7
 Django==3.0.5
+django-rest-framework-mongoengine==3.4.1
+dnspython==1.16.0
+mongoengine==0.20.0
+pymongo==3.10.1
 pytz==2020.1
 sqlparse==0.3.1
