--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.2.7
 Django==3.0.5
+django-environ==0.4.5
 django-rest-framework-mongoengine==3.4.1
 dnspython==1.16.0
 mongoengine==0.20.0
