--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ Django==3.0.5
 django-environ==0.4.5
 django-rest-framework-mongoengine==3.4.1
 dnspython==1.16.0
+gunicorn==20.0.4
 mongoengine==0.20.0
 pymongo==3.10.1
 pytz==2020.1
 sqlparse==0.3.1
+whitenoise==5.0.1
