--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,20 @@
 asgiref==3.2.7
+cycler==0.10.0
 Django==3.0.5
+django-cors-headers==3.3.0
 django-environ==0.4.5
 django-rest-framework-mongoengine==3.4.1
 dnspython==1.16.0
 graphviz==0.14
 gunicorn==20.0.4
 joblib==0.15.1
+kiwisolver==1.2.0
+matplotlib==3.2.1
 mongoengine==0.20.0
 numpy==1.18.4
 pandas==1.0.3
 pymongo==3.10.1
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
 scikit-learn==0.23.1
